# javaproperties-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.rst  TODO.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: changelog.rst  conf.py  index.rst  javaproperties.rst  json2properties.rst  properties2json.rst
javaproperties_cli/: __init__.py  __main__.py  fromjson.py  tojson.py  util.py
src/javaproperties_cli/: __init__.py  __main__.py  fromjson.py  tojson.py  util.py
test/: conftest.py  test_cmd_delete.py  test_cmd_format.py  test_cmd_get.py  test_cmd_select.py  test_cmd_set.py  test_fromjson.py  test_tojson.py
