[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "javaproperties-cli"
dynamic = ["version"]
description = "Command-line manipulation of Java .properties files"
readme = "README.rst"
requires-python = ">=3.7"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "javaproperties-cli@varonathe.org" }
]

keywords = [
    "config",
    "configfile",
    "configuration",
    "java",
    "javaproperties",
    "properties",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Utilities",
]

dependencies = [
    "click          >= 7.0",
    "javaproperties >= 0.7.0, <0.9",
]

[project.scripts]
javaproperties  = "javaproperties_cli.__main__:javaproperties"
properties2json = "javaproperties_cli.tojson:properties2json"
json2properties = "javaproperties_cli.fromjson:json2properties"

[project.urls]
"Source Code" = "https://github.com/jwodder/javaproperties-cli"
"Bug Tracker" = "https://github.com/jwodder/javaproperties-cli/issues"
"Documentation" = "https://javaproperties-cli.readthedocs.io"

[tool.hatch.version]
path = "src/javaproperties_cli/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
