[aliases]
make = sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = javaproperties-cli
version = attr:javaproperties_cli.__version__
description = Command-line manipulation of Java .properties files
long_description = file:README.rst
author = John Thorvald Wodder II
author_email = javaproperties-cli@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/javaproperties-cli

keywords =
    config
    configfile
    configuration
    java
    javaproperties
    properties

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Java Libraries
    Topic :: Utilities

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4
install_requires =
    click          ~= 6.5
    javaproperties >= 0.4.0, <0.5
    six            ~= 1.1

[options.entry_points]
console_scripts =
    javaproperties  = javaproperties_cli.__main__:javaproperties
    properties2json = javaproperties_cli.tojson:properties2json
    json2properties = javaproperties_cli.fromjson:json2properties
