[metadata]
name = javaproperties-cli
version = attr:javaproperties_cli.__version__
description = Command-line manipulation of Java .properties files
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = javaproperties-cli@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/javaproperties-cli

keywords =
    config
    configfile
    configuration
    java
    javaproperties
    properties

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Java Libraries
    Topic :: Utilities

project_urls =
    Source Code = https://github.com/jwodder/javaproperties-cli
    Bug Tracker = https://github.com/jwodder/javaproperties-cli/issues
    Documentation = https://javaproperties-cli.readthedocs.io

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    click          >= 7.0
    javaproperties >= 0.7.0, <0.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    javaproperties  = javaproperties_cli.__main__:javaproperties
    properties2json = javaproperties_cli.tojson:properties2json
    json2properties = javaproperties_cli.fromjson:json2properties
